--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <header class="container">
-    <h1 [routerLink]="['/home']">The Wanderlust Blog</h1>
     <nav-bar></nav-bar>
 </header>
 <main>
@@ -9,15 +8,15 @@
     <div class="container">
         <ul>
             <li>Copyright&copy;2025 -</li>
-            <li class="wander"> The Wanderlust Blog -</li>
-            <li>Aviso legal -</li>
-            <li>Cookies</li>
+            <li><a class="wander" href=""> The Wanderlust Blog -</a></li>
+            <li><a href="">Aviso legal -</a></li>
+            <li><a href="">Cookies</a></li>
         </ul>
         <div>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-tiktok"></i>
-            <i class="fa-brands fa-x-twitter"></i>
+            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
 
         </div>
     </div>
