--- a/src/app/pages/form/form.component.css
+++ b/src/app/pages/form/form.component.css
@@ -1,3 +1,19 @@
+.container {
+    background-image: url(../../images/image\ copy\ 4.png);
+    background-blend-mode: color-burn;
+    background-repeat: no-repeat;
+    background-size: content;
+    background-position: center;
+    background-size: 100%;
+    margin-bottom: 100px;
+}
+
+h2 {
+    margin: 30px;
+    text-shadow: 4px 4px 4px white;
+    font-size: 250%;
+}
+
 .btn {
     background-color: rgb(104, 8, 8);
     color: white;
@@ -7,6 +23,23 @@ form {
     width: 60%;
     margin: 0 auto;
 
+}
+
+input.ng-invalid.ng-touched {
+    border: 1px solid rgb(174, 130, 130);
+
+}
+
+input {
+    font-size: 120%;
+}
+
+span {
+    text-align: left;
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 150%;
 }
 
 @media(max-width:768px) {
@@ -19,36 +52,4 @@ form {
     form {
         width: 75%;
     }
-}
-
-
-input.ng-invalid.ng-touched {
-    border: 1px solid rgb(174, 130, 130);
-
-}
-
-h2 {
-    margin: 30px;
-    text-shadow: 4px 4px 4px white;
-    font-size: 250%;
-}
-
-.container {
-    background-image: url(../../images/image\ copy\ 4.png);
-    background-blend-mode: color-burn;
-    background-repeat: no-repeat;
-    background-size: content;
-    background-position: center;
-    background-size: 100%;
-    margin-bottom: 100px;
-}
-
-
-
-span {
-    text-align: left;
-    font-family: "Caveat", cursive;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 150%;
 }
