--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,25 +1,18 @@
 <div class="container ">
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
+    <nav>
+        <h1 [routerLink]="['/home']">The Wanderlust Blog</h1>
+        <ul>
+            <li [routerLink]="['/new']">Nuevo post</li>
+            <li [routerLink]="['/posts']">Posts</li>
+            <li [routerLink]="['/news']">Noticias</li>
+        </ul>
+        <form class="d-flex" [formGroup]="nameForm" (ngSubmit)="onSubmit()">
+            <input class="form-control " for="nombre" type="search" placeholder="Busca un destino" aria-label="Búsqueda"
+                formControlName="nombre">
+            <input type="submit" value="🔍">
+        </form>
 
-            <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-link" [routerLink]="['/new']">Nuevo post</li>
-                    <li class="nav-link" [routerLink]="['/list']">Posts</li>
-                    <li class="nav-link" [routerLink]="['/news']">Noticias</li>
-                </ul>
-                <form class="d-flex" [formGroup]="nameForm" (ngSubmit)="onSubmit()">
-                    <input class="form-control me-2" for="nombre" type="search" placeholder="Busca un destino"
-                        aria-label="Búsqueda" formControlName="nombre">
-                    <input type="submit" value="🔍">
-                </form>
-            </div>
-        </div>
     </nav>
+    <hr>
 </div>
 <ngx-sonner-toaster position="top-center" />
