--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -7,7 +7,7 @@
     background-position: 20%;
     align-content: center;
     text-align: center;
-
+    margin-top: -20px;
 }
 
 h2 {
@@ -17,7 +17,6 @@ h2 {
 
 button {
     font-size: 130%;
-
     transition: .5s;
 
     &:hover {
@@ -28,7 +27,7 @@ button {
 .card {
     position: relative;
     text-align: center;
-
+    cursor: pointer;
 }
 
 h3 {
@@ -42,7 +41,7 @@ h3 {
     font-weight: 400;
     font-style: normal;
     font-size: 120%;
-    transition: 1s;
+    transition: .5s;
     opacity: 0;
 }
 
@@ -58,34 +57,15 @@ p {
     font-size: 150%;
 }
 
-img {
-    transition: 1s;
-}
-
-.card:hover img {
-    filter: brightness(0.7);
-}
-
-.by {
-    display: flex;
-    justify-content: space-around;
-
-}
-
-.card:hover {
-    transition: 1s;
-    scale: 1.05;
-    box-shadow: 2px 2px 2px grey;
-}
-
 .contenedor {
     display: flex;
     flex-wrap: wrap;
-    justify-content: LEFT;
+    justify-content: center;
     gap: 20px;
     margin-bottom: 30px;
-
 }
+
+
 
 .articulos {
     margin: 10px 0;
@@ -96,4 +76,33 @@ img {
     color: black;
     font-size: 120%;
     margin-bottom: 20px;
+}
+
+.card:hover img {
+    filter: brightness(0.7);
+
+}
+
+.card:hover {
+    transition: 1s;
+    scale: 1.05;
+    box-shadow: 2px 2px 2px grey;
+}
+
+img {
+    transition: .5s;
+}
+
+.by {
+    display: flex;
+    justify-content: space-around;
+    text-transform: capitalize;
+}
+
+
+@media(max-width:1004px) {
+
+    .contenedor {
+        justify-content: center;
+    }
 }
