--- a/src/app/pages/post-view/post-view.component.css
+++ b/src/app/pages/post-view/post-view.component.css
@@ -1,9 +1,32 @@
 figure {
-    text-align: center;
     max-width: 700px;
 }
 
 img {
     width: 100%;
-    height: auto;
+}
+
+h4 {
+    color: black;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 200%;
+}
+
+h2,
+h5 {
+    text-align: center;
+}
+
+h5 {
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 150%;
+    text-transform: capitalize;
+}
+
+p {
+    line-height: 30px;
+    margin: 20px 0;
 }
