moifico texto de un validador

--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -35,7 +35,7 @@
         </div>
         @if(checkError('texto', 'required')){
         <div class="alert alert-danger" role="alert">
-            El campo descripción es obligatorio
+            El campo descripción es obligatorio rellenarlo con al menos 100 palabras. (en esta versión no)
         </div>
         }
         <div class="mb-3">
