modifico el enlace a las noticias para que se abra en otra pestaña

--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -31,7 +31,7 @@
                         <p class="card-text ">{{ad.entradilla}}
                             <small>Enlace publicitario</small>
                     </div>
-                    <a href={{ad.url}}> <button>Ver más</button></a>
+                    <a href={{ad.url}} target="_blank"> <button>Ver más</button></a>
                 </div>
             </article>
             }
